Added test task.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,17 @@
 				"kind": "build",
 				"isDefault": true
 			}
+		},
+		{
+			"type": "npm",
+			"script": "test",
+			"group": {
+				"kind": "test",
+				"isDefault": true
+			},
+			"problemMatcher": [],
+			"label": "npm: test",
+			"detail": "node ./out/test/runTest.js"
 		}
 	]
 }
