--- a/package.json
+++ b/package.json
@@ -73,7 +73,12 @@
         "execution.ExecuteLizardLintOnFileSave": {
           "type": "boolean",
           "default": true,
-          "description": "Execute lizard linter on file save."
+          "description": "Execute lizard linter when a file is saved."
+        },
+        "execution.ExecuteLizardLintOnFileOpen": {
+          "type": "boolean",
+          "default": true,
+          "description": "Execute lizard linter when a file is opened."
         },
         "execution.ModifiedCyclomaticComplexity": {
           "type": "boolean",
@@ -88,19 +93,19 @@
       }
     },
     "taskDefinitions": [
-			{
-				"type": "lizard-linter",
-				"required": [
-					"logFilePath"
-				],
-				"properties": {
-					"logFilePath": {
-						"type": "string",
-						"description": "Path to the generated log file."
-					}
-				}
-			}
-		]
+      {
+        "type": "lizard-linter",
+        "required": [
+          "logFilePath"
+        ],
+        "properties": {
+          "logFilePath": {
+            "type": "string",
+            "description": "Path to the generated log file."
+          }
+        }
+      }
+    ]
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
@@ -111,6 +116,7 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.3",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "16.x",
@@ -121,7 +127,8 @@
     "eslint": "^8.20.0",
     "glob": "^8.0.3",
     "mocha": "^10.0.0",
-    "typescript": "^4.7.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3"
   },
   "dependencies": {
     "path": "^0.12.7"
