--- a/package.json
+++ b/package.json
@@ -70,6 +70,11 @@
           "default": 2,
           "description": "Thresholds for number of parameters."
         },
+        "thresholds.linesOfCodeWithoutComments": {
+          "type": "number",
+          "default": 1000,
+          "description": "Thresholds for lines of code without comments."
+        },
         "execution.ExecuteLizardLintOnFileSave": {
           "type": "boolean",
           "default": true,
