Added xvfb to spell book

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,8 @@
 
     "mochaExplorer.require": "ts-node/register",
     "mochaExplorer.files": "src/test/**/*.ts",
+    "cSpell.words": [
+        "xvfb"
+    ],
 
 }
