--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16.x
-    - run: curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+    - run: curl https://bootstrap.pypa.io/pip/2.7/get-pip.py -o get-pip.py
     - run: python get-pip.py
     - run: pip install lizard
     - run: npm install
